# anki-forge

./: .gitignore  Cargo.toml  Makefile  README.md
.github/: pull_request_template.md
.github/workflows/: ci.yml  compat.yml  contract-ci.yml  contract-release.yml  fuzz.yml  gemini-codex-autofix.yml
anki_forge/: Cargo.toml
anki_forge/examples/: conformance_surface.rs  deck_basic_flow.rs  minimal_flow.rs  product_basic_flow.rs  product_roundtrip_oracle_prepare.rs  target_api_basic.rs  target_api_custom_notetype.rs  target_api_media.rs
anki_forge/src/: authoring.rs  lib.rs  prelude.rs  writer.rs
anki_forge/src/deck/: builders.rs  export.rs  identity.rs  lowering.rs  media.rs  mod.rs  model.rs  validation.rs
anki_forge/src/diagnostics/: mod.rs
anki_forge/src/product/: assets.rs  builders.rs  content.rs  diagnostics.rs  helpers.rs  identity.rs  lowering.rs  media_registry.rs  metadata.rs  mod.rs  model.rs  note.rs  notetype.rs  project.rs  stock.rs  template.rs
anki_forge/src/product/project/: counts.rs
anki_forge/src/runtime/: assets.rs  build.rs  defaults.rs  diff.rs  discovery.rs  inspect.rs  mod.rs  normalize.rs  schema.rs
anki_forge/tests/: build_report_tests.rs  custom_merge_id_snapshot_tests.rs  custom_notetype_api_tests.rs  deck_export_tests.rs  deck_identity_contract_tests.rs  deck_identity_roundtrip_tests.rs  deck_lowering_tests.rs  deck_model_tests.rs  deck_project_facade_tests.rs  deck_validation_tests.rs  product_bundler_tests.rs  product_helper_tests.rs  product_lowering_tests.rs  product_model_tests.rs  product_pipeline_tests.rs  product_portability_tests.rs  project_api_tests.rs  project_media_api_tests.rs  public_api_boundary_tests.rs  runtime_facade_tests.rs  typed_core_tests.rs
anki_forge/tests/fixtures/product/: basic_answer_divider.case.json  io_font_bundle.case.json  io_font_bundle_roundtrip_v1.case.json  io_font_bundle_roundtrip_v2.case.json
authoring_core/: Cargo.toml
authoring_core/src/: canonical_json.rs  identity.rs  lib.rs  media.rs  media_io.rs  media_refs.rs  model.rs  normalize.rs  risk.rs  selector.rs  stock.rs
authoring_core/tests/: media_ingest_tests.rs  media_io_tests.rs  media_refs_tests.rs  normalization_pipeline_tests.rs  risk_tests.rs  selector_tests.rs
bindings/node/: README.md  package.json
bindings/python/: README.md  pyproject.toml
bindings/python/examples/: minimal_flow.py  target_api_custom.py  target_api_media.py
bindings/python/src/anki_forge_python/: __init__.py  contracts.py  errors.py  helpers.py  raw.py  runtime.py  structured.py  version.py
bindings/python/tests/: test_raw.py  test_structured.py
contract_tools/: Cargo.toml
contract_tools/src/: build_cmd.rs  compat_oracle.rs  diff_cmd.rs  fixtures.rs  gates.rs  inspect_cmd.rs  lib.rs  main.rs  manifest.rs  normalize_cmd.rs  package.rs  policies.rs  registry.rs  schema.rs  semantics.rs  summary.rs  versioning.rs
contract_tools/tests/: cli_tests.rs  compat_oracle_tests.rs  fixture_gate_tests.rs  manifest_tests.rs  package_tests.rs  policy_gate_tests.rs  registry_gate_tests.rs  schema_gate_tests.rs  versioning_gate_tests.rs  workspace_smoke_tests.rs
contracts/: manifest.yaml
contracts/contexts/: build-context.default.yaml
contracts/errors/: error-registry.yaml
contracts/fixtures/: index.yaml
contracts/policies/: identity-policy.default.yaml  risk-policy.default.yaml  verification-policy.default.yaml  writer-policy.default.yaml
contracts/schema/: authoring-ir.schema.json  build-context.schema.json  comparison-context.schema.json  diagnostic-item.schema.json  diff-report.schema.json  error-registry.schema.json  identity-policy.schema.json  inspect-report.schema.json  manifest.schema.json  merge-risk-report.schema.json  normalization-diagnostics.schema.json  normalization-result.schema.json  normalized-ir.schema.json  note-identity-fixture.schema.json  package-build-result.schema.json  risk-policy.schema.json  service-envelope.schema.json  validation-report.schema.json  verification-policy.schema.json  writer-policy.schema.json
contracts/semantics/: build.md  canonical-serialization.md  compatibility.md  diff.md  golden-regression.md  identity.md  inspect.md  merge-risk.md  normalization.md  note-stable-id.md  path-conventions.md  target-selector-grammar.md  validation.md
contracts/versioning/: compatibility-classes.yaml  policy.md  upgrade-rules.yaml
docs/adr/: 0001-contract-bundle-source-of-truth.md  0002-bundle-version-is-public-axis.md  README.md
docs/process/: contract-change-policy.md
docs/rfcs/: README.md
implementations/rust/: README.md
scripts/: run_manual_desktop_scenarios.sh  run_roundtrip_oracle.sh  verify-ci.sh
scripts/roundtrip_oracle/: Cargo.toml
src/: error.rs  lib.rs  options.rs  package_builder.rs  prelude.rs
src/api/: mod.rs
src/cardgen/: basic.rs  cloze.rs  mod.rs  parser.rs  render_nonempty.rs
src/compat/: mod.rs
src/db/: mod.rs  schema.rs  writer.rs
src/determinism/: clock.rs  mod.rs
src/domain/: card.rs  deck.rs  ids.rs  media.rs  mod.rs  model.rs  note.rs  package_spec.rs  template.rs
src/guid/: collision.rs  custom.rs  deterministic.rs  mod.rs  random.rs
writer_core/: Cargo.toml
writer_core/src/: anki_proto.rs  apkg.rs  build.rs  canonical_json.rs  diff.rs  inspect.rs  lib.rs  media.rs  media_refs.rs  model.rs  policy.rs  staging.rs
writer_core/tests/: build_tests.rs  diff_tests.rs  inspect_tests.rs
(+135 files in other folders)
