[package]
name = "anki_forge"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1"
authoring_core = { path = "../authoring_core" }
base64 = "0.22"
hex = "0.4"
jsonschema = { version = "0.18.3", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha1 = "0.10"
tempfile = "3"
url = "2.5.2"
writer_core = { path = "../writer_core" }

[lints]
workspace = true
