[package]
name = "authoring_core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1"
base64 = "0.22"
blake3 = "1"
hex = "0.4"
html-escape = "0.2"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
tempfile = "3"

[lints]
workspace = true
