[package]
name = "contract_tools"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1"
clap = { version = "=4.5.20", features = ["derive"] }
jsonschema = { version = "0.18.3", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

[dev-dependencies]

[lints]
workspace = true
