[package]
name = "contract_tools"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1"
clap = { version = "=4.5.20", features = ["derive"] }
flate2 = "=1.0.35"
jsonschema = { version = "0.18.3", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tar = "=0.4.42"

[dev-dependencies]
tempfile = "=3.17.1"

[lints]
workspace = true
