[package]
name = "contract_tools"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1"
anki_forge = { path = "../anki_forge" }
blake3 = "1"
clap = { version = "=4.5.20", features = ["derive"] }
flate2 = "=1.0.35"
html-escape = "0.2"
jsonschema = { version = "0.18.3", default-features = false }
authoring_core = { path = "../authoring_core" }
writer_core = { path = "../writer_core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
prost = "0.13"
rusqlite = { version = "0.32", features = ["bundled"] }
sha1 = "0.10"
tar = "=0.4.42"
url = "2.5.2"
zip = { version = "2.2.0", default-features = false, features = ["deflate"] }
zstd = "0.13"

[dev-dependencies]
tempfile = "=3.17.1"

[lints]
workspace = true
