[package]
name = "writer_core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1"
authoring_core = { path = "../authoring_core" }
base64 = "0.22"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"

[lints]
workspace = true
