[project]
name = "anki-forge-python"
version = "0.1.0"
description = "Local Phase 4 Python bindings for anki-forge"
readme = "README.md"
requires-python = ">=3.11"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
